==> adam-brower/ece_1896/embedded/brain/Core/Src/Adafruit_RA8875.cpp <==
#include "Adafruit_RA8875.h"

bool Adafruit_RA8875::begin() {
    _size = RA8875_800x480;
    _width = 800;
    _height = 480;
    _rotation = 0;

    // TODO: init pins manually
      HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);

      // TODO: figure out if needed
//    pinMode(_rst, OUTPUT);
//    digitalWrite(_rst, LOW);
//    delay(100);
//    digitalWrite(_rst, HIGH);
//    delay(100);

//
//    SPI.begin();

    uint8_t x = Adafruit_RA8875::readReg(0);
    printf("x = %d\r\n", x);
    if (x != 0x75) {
		printf("DISPLAY READ REGISTER FAILED!!!! \r\n");
        return false;
    }

    Adafruit_RA8875::initialize();
    return true;
}

void Adafruit_RA8875::pushPixels(uint32_t num, uint16_t p) {

	// TODO: implement SPI and write functions for this
//    digitalWrite(_cs, LOW);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_RESET);
//    SPI.transfer(RA8875_DATAWRITE);
	uint8_t data2 = 0x00;
	HAL_SPI_Transmit(&_DIS_HSPI, &data2, 1, HAL_MAX_DELAY);

    while (num--) {
//        SPI.transfer(p >> 8);
    	uint8_t pHigh = p >> 8;
    	HAL_SPI_Transmit(&_DIS_HSPI, &pHigh, 1, HAL_MAX_DELAY);
//    	SPI.transfer(p);
    	uint8_t pLow = p&0xFF;
    	HAL_SPI_Transmit(&_DIS_HSPI, &pLow, 1, HAL_MAX_DELAY);
    }
//    digitalWrite(_cs, HIGH);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);
}

void Adafruit_RA8875::drawPixel(int16_t x, int16_t y, uint16_t color) {
    x = Adafruit_RA8875::applyRotationX(x);
    y = Adafruit_RA8875::applyRotationY(y);

    Adafruit_RA8875::writeReg(RA8875_CURH0, x);
    Adafruit_RA8875::writeReg(RA8875_CURH1, x >> 8);
    Adafruit_RA8875::writeReg(RA8875_CURV0, y);
    Adafruit_RA8875::writeReg(RA8875_CURV1, y >> 8);
    Adafruit_RA8875::writeCommand(RA8875_MRWC);

    // TODO: implement SPI and write functions for this
//    digitalWrite(_cs, LOW);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_RESET);
//    SPI.transfer(RA8875_DATAWRITE);
	uint8_t data2 = 0x00;
	HAL_SPI_Transmit(&_DIS_HSPI, &data2, 1, HAL_MAX_DELAY);
//    SPI.transfer(color >> 8);
	uint8_t pHigh = color >> 8;
	HAL_SPI_Transmit(&_DIS_HSPI, &pHigh, 1, HAL_MAX_DELAY);
//    SPI.transfer(color);
	uint8_t pLow = color&0xFF;
	HAL_SPI_Transmit(&_DIS_HSPI, &pLow, 1, HAL_MAX_DELAY);
//    digitalWrite(_cs, HIGH);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);
}

void Adafruit_RA8875::drawPixels(uint16_t *p, uint32_t num, int16_t x,
                                                                 int16_t y) {
	Adafruit_RA8875::writeReg(RA8875_CURH0, x);
	Adafruit_RA8875::writeReg(RA8875_CURH1, x >> 8);
	Adafruit_RA8875::writeReg(RA8875_CURV0, y);
	Adafruit_RA8875::writeReg(RA8875_CURV1, y >> 8);
	Adafruit_RA8875::writeCommand(RA8875_MRWC);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_RESET);
	uint8_t data2 = 0x00;
	HAL_SPI_Transmit(&_DIS_HSPI, &data2, 1, HAL_MAX_DELAY);
	    while (num--) {
	    	uint8_t p1 = *p >> 8;
	    	uint8_t p2 = *p & 0xFF;
	    	HAL_SPI_Transmit(&_DIS_HSPI, &p1, 1, HAL_MAX_DELAY);
//	        SPI.transfer(*p >> 8);
//	        SPI.transfer(*p & 0xFF);
	        HAL_SPI_Transmit(&_DIS_HSPI, &p2, 1, HAL_MAX_DELAY);
	        p++;
	    }
	    HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);
}

void Adafruit_RA8875::writeData(uint8_t d) {

	// TODO: implement SPI and write functions for this
//    digitalWrite(_cs, LOW);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_RESET);
//    spi_begin();
//    SPI.transfer(RA8875_DATAWRITE);
	uint8_t data2 = 0x00;
	HAL_SPI_Transmit(&_DIS_HSPI, &data2, 1, HAL_MAX_DELAY);
//    SPI.transfer(d);
	HAL_SPI_Transmit(&_DIS_HSPI, &d, 1, HAL_MAX_DELAY);
//    spi_end();
//    digitalWrite(_cs, HIGH);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);
}

uint8_t Adafruit_RA8875::readData(void) {

	// TODO: implement SPI and write functions for this
//    digitalWrite(_cs, LOW);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_RESET);
//    spi_begin();
//
//    SPI.transfer(RA8875_DATAREAD);
	 uint8_t data3 = 0x40;
	HAL_SPI_Transmit(&_DIS_HSPI, &data3, 1, HAL_MAX_DELAY);
//    uint8_t x = SPI.transfer(0x0);
	uint8_t data4 = 0x00;
	uint8_t x;
	HAL_SPI_TransmitReceive(&_DIS_HSPI, &data4, &x, 1, HAL_MAX_DELAY);
//    spi_end();
//
//    digitalWrite(_cs, HIGH);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);
    return x;
}

void Adafruit_RA8875::writeCommand(uint8_t d) {

	// TODO: implement SPI and write functions for this
//    digitalWrite(_cs, LOW);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_RESET);
//    spi_begin();
//
//    SPI.transfer(RA8875_CMDWRITE);
    // TODO: clean this up
    uint8_t data1 = 0x80;
	HAL_SPI_Transmit(&_DIS_HSPI, &data1, 1, HAL_MAX_DELAY);
	HAL_SPI_Transmit(&_DIS_HSPI, &d, 1, HAL_MAX_DELAY);
//    SPI.transfer(d);
//    spi_end();

//
//    digitalWrite(_cs, HIGH);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);
}
