==> codewitch-honey-crisis/LungTrainer_CommsProto/lib/Adafruit_RA8875/Adafruit_RA8875.cpp <==
#include "Adafruit_RA8875.h"
#include <EEPROM.h>
#include <SPI.h>

boolean Adafruit_RA8875::begin(enum RA8875sizes s) {
  _size = s;

  if (_size == RA8875_480x80) {
    _width = 480;
    _height = 80;
  } else if (_size == RA8875_480x128) {
    _width = 480;
    _height = 128;
  } else if (_size == RA8875_480x272) {
    _width = 480;
    _height = 272;
  } else if (_size == RA8875_800x480) {
    _width = 800;
    _height = 480;
  } else {
    return false;
  }
  _rotation = 0;
  pinMode(_cs, OUTPUT);
  digitalWrite(_cs, HIGH);
  pinMode(_rst, OUTPUT);

  digitalWrite(_rst, LOW);
  delay(100);
  digitalWrite(_rst, HIGH);
  delay(100);

  SPI.begin();

#ifdef SPI_HAS_TRANSACTION
/// @cond DISABLE
#if defined(ARDUINO_ARCH_ARC32)
  /// @endcond
  spi_speed = 2000000;
/// @cond DISABLE
#else
  /// @endcond
  spi_speed = 125000;
/// @cond DISABLE
#endif
/// @endcond
#else
#ifdef __AVR__
  SPI.setClockDivider(SPI_CLOCK_DIV128);
  SPI.setDataMode(SPI_MODE0);
#endif
#endif

  uint8_t x = readReg(0);
  //    Serial.print("x = 0x"); Serial.println(x,HEX);
  if (x != 0x75) {
    Serial.println(x);
    return false;
  }

  initialize();

#ifdef SPI_HAS_TRANSACTION
/// @cond DISABLE
#if defined(ARDUINO_ARCH_ARC32)
  /// @endcond
  spi_speed = 12000000L;
#else
  spi_speed = 4000000L;
#endif
#else
#ifdef __AVR__
  SPI.setClockDivider(SPI_CLOCK_DIV4);
#endif
#endif

  return true;
}

void Adafruit_RA8875::pushPixels(uint32_t num, uint16_t p) {
  digitalWrite(_cs, LOW);
  SPI.transfer(RA8875_DATAWRITE);
  while (num--) {
    SPI.transfer(p >> 8);
    SPI.transfer(p);
  }
  digitalWrite(_cs, HIGH);
}

void Adafruit_RA8875::drawPixel(int16_t x, int16_t y, uint16_t color) {
  x = applyRotationX(x);
  y = applyRotationY(y);

  writeReg(RA8875_CURH0, x);
  writeReg(RA8875_CURH1, x >> 8);
  writeReg(RA8875_CURV0, y);
  writeReg(RA8875_CURV1, y >> 8);
  writeCommand(RA8875_MRWC);
  digitalWrite(_cs, LOW);
  SPI.transfer(RA8875_DATAWRITE);
  SPI.transfer(color >> 8);
  SPI.transfer(color);
  digitalWrite(_cs, HIGH);
}

void Adafruit_RA8875::drawPixels(uint16_t *p, uint32_t num, int16_t x,
                                 int16_t y) {
  x = applyRotationX(x);
  y = applyRotationY(y);

  writeReg(RA8875_CURH0, x);
  writeReg(RA8875_CURH1, x >> 8);
  writeReg(RA8875_CURV0, y);
  writeReg(RA8875_CURV1, y >> 8);

  uint8_t dir = RA8875_MWCR0_LRTD;
  if (_rotation == 2) {
    dir = RA8875_MWCR0_RLTD;
  }
  writeReg(RA8875_MWCR0, (readReg(RA8875_MWCR0) & ~RA8875_MWCR0_DIRMASK) | dir);

  writeCommand(RA8875_MRWC);
  digitalWrite(_cs, LOW);
  SPI.transfer(RA8875_DATAWRITE);
  while (num--) {
    SPI.transfer16(*p++);
  }
  digitalWrite(_cs, HIGH);
}

void Adafruit_RA8875::writeData(uint8_t d) {
  digitalWrite(_cs, LOW);
  spi_begin();
  SPI.transfer(RA8875_DATAWRITE);
  SPI.transfer(d);
  spi_end();
  digitalWrite(_cs, HIGH);
}

uint8_t Adafruit_RA8875::readData(void) {
  digitalWrite(_cs, LOW);
  spi_begin();

  SPI.transfer(RA8875_DATAREAD);
  uint8_t x = SPI.transfer(0x0);
  spi_end();

  digitalWrite(_cs, HIGH);
  return x;
}

void Adafruit_RA8875::writeCommand(uint8_t d) {
  digitalWrite(_cs, LOW);
  spi_begin();

  SPI.transfer(RA8875_CMDWRITE);
  SPI.transfer(d);
  spi_end();

  digitalWrite(_cs, HIGH);
}
